force-app/main/default/objects/Contact/fields/Mailing_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Latitude__c</fullName>
    <formula>MailingLatitude</formula>
    <label>Mailing Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>