force-app/main/default/objects/Contact/fields/Mailing_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Longitude__c</fullName>
    <formula>MailingLongitude</formula>
    <label>Mailing Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>