force-app/main/default/objects/Contact/fields/Other_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Other_Latitude__c</fullName>
    <formula>OtherLatitude</formula>
    <label>Other Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>