force-app/main/default/objects/Contact/fields/Other_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Other_Longitude__c</fullName>
    <formula>OtherLongitude</formula>
    <label>Other Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>